@@ -1,3 +1,9 @@
+2004-09-28  Bruno Haible  <bruno@clisp.org>
+
+	Make (MAKE-SEQUENCE (FIND-CLASS 'LIST) n) work.
+	* sequence.d (valid_type1): Recognize also built-in class objects.
+	* clos-class3.lisp: Pass <list> to %defclos as well.
+
 2004-09-19  Bruno Haible  <bruno@clisp.org>
 
 	Support for user-defined DEFGENERIC options.
